<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:backgroundTint="@color/light_grey"
    app:cardCornerRadius="3dp"
    app:cardElevation="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:id="@+id/idLL1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/item_name"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:id="@+id/idtvitemname"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="@string/quantity"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:id="@+id/idtvquantity"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.25"
                android:text="@string/rate"
                android:textColor="@color/black"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:id="@+id/idtvrate"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/idivdelete"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_delete_24"
                app:tint="#F04E42"
                android:layout_margin="3dp"
                android:contentDescription="@string/delete_item" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_margin="3dp"
            android:id="@+id/idtvheading"
            android:layout_toStartOf="@id/idtvtotalamount"
            android:layout_below="@id/idLL1"
            android:text="@string/total_cost"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_margin="3dp"
            android:id="@+id/idtvtotalamount"
            android:layout_below="@id/idLL1"
            android:text="@string/amount"
            android:layout_alignParentEnd="true"
            android:textColor="@color/black"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>